--- a/index.html
+++ b/index.html
@@ -7,11 +7,43 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/main.css">
 
-    <title>Hello, world!</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+
+    <title>Radhika Joglekar</title>
+
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<a class="navbar-brand ml-3" href="#">Logo</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+		  <span class="navbar-toggler-icon"></span>
+		</button>
+
+		<div class="collapse navbar-collapse circle" id="navbarTogglerDemo02">
+		  <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+			<li class="nav-item active px-2">
+			  <a class="nav-link" href="#">About<span class="sr-only"></span></a>
+			</li>
+			<li class="nav-item active px-2">
+				<a class="nav-link" href="#">Portfolio<span class="sr-only"></span></a>
+			  </li>
+			<li class="nav-item active px-2">
+				<a class="nav-link" href="#">Other Works <span class="sr-only"></span></a>
+			</li>
+			<li class="nav-item active px-2">
+				<a class="nav-link" href="#">Resume<span class="sr-only"></span></a>
+			  </li>
+			<li class="nav-item active px-2">
+			<a class="nav-link" href="#">Contact Me<span class="sr-only"></span></a>
+			</li>
+		  </ul>
+		</div>
+	  </nav>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
