--- a/index.html
+++ b/index.html
@@ -44,11 +44,58 @@
   </head>
   <body>
 
+	<div class="container my-4 ">
+		<div class="row">
+			<div class="col-sm-8 my-5">
+				<span style="font-size: 40px;">Hi! I am Radhika,</span>
+				<div class="wrapper">
+					<div class="static-txt">I'm</div>
+					<ul class="pl-3 dynamic-txts">
+						<li>
+							<span>an Interaction Designer.</span>
+						</li>
+						<li>
+							<span>a UX Researcher.</span>
+						</li>
+						<li>
+							<span>a UI Developer. </span>
+						</li>
+						<li>
+							<span>an Artist.</span>
+						</li>
+						<li>
+							<span>a Cooking Enthusiast.</span>
+						</li>
+					</ul>
+				</div>
+			</div>
+
+			<div class="col-sm-4">
+				<img src="images/Profile.png" class="img-fluid hero-image" alt="Responsive image">
+			</div>
+		  </div>
+	  </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
+	<!-- Remove the container if you want to extend the Footer to full width. -->
+
+	<footer class="text-center text-lg-start">
+	  <div class="container d-flex justify-content-center pt-5 rounded-social-buttons">
+		<a class="social-button linkedin mx-2" href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
+		<a class="social-button instagram mx-2" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+	  </div>
+	  <!-- Copyright -->
+	  <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+			© 2024 Radhika Shashikant Joglekar<br>
+			All Rights Reserved. | Designed & Developed by Radhika Joglekar | Powered by Creativity & Passion
+	  </div>
+	  <!-- Copyright -->
+	</footer>
+  <!-- End of .container -->
   </body>
 </html>
