--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@
 					<div class="static-txt">I'm</div>
 					<ul class="pl-3 dynamic-txts">
 						<li>
-							<span>an Interaction Designer.</span>
+							<span>a Designer.</span>
 						</li>
 						<li>
 							<span>a UX Researcher.</span>
 						</li>
 						<li>
-							<span>a UI Developer. </span>
+							<span>a UI Developer.</span>
 						</li>
 						<li>
 							<span>an Artist.</span>
 						</li>
-						<li>
-							<span>a Cooking Enthusiast.</span>
-						</li>
+						<!-- <li>
+							<span>a Cooking Enthusiast</span>
+						</li> -->
 					</ul>
 				</div>
 			</div>
