--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	  <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 	  <script>
 		var typed = new Typed(".auto-type", {
-			strings : ["an Interaction Designer","a UX Researcher", "a UI Developer", "an Artist", "a Cooking Enthusiast"],
+			strings : ["an Interaction Designer.","a UX Researcher.", "a UI Developer.", "an Artist.", "a Cooking Enthusiast."],
 			typeSpeed: 150,
 			backSpeed: 150,
 			looped: true,
