--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<a class="nav-link" href="#">Other Works <span class="sr-only"></span></a>
 			</li>
 			<li class="nav-item active px-2">
-				<a class="nav-link" href="#">Resume<span class="sr-only"></span></a>
+				<a class="nav-link" href="assets/Radhika_Joglekar_UX_Design.pdf" download>Resume<span class="sr-only"></span></a>
 			  </li>
 			<li class="nav-item active px-2">
 			<a class="nav-link" href="#">Contact Me<span class="sr-only"></span></a>
