Updated index.html and main.css
Refined hero section.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </head>
   <body>
 
-	<div class="container my-4 main-hero">
+	<div class="container-fluid main-hero py-3">
 		<div class="row">
 			<!-- <div class="col-sm-8 my-5">
 				<span style="font-size: 40px;">Hi! I am Radhika,</span>
@@ -69,22 +69,38 @@
 					</ul>
 				</div>
 			</div> -->
-			<div class="col-sm-8 my-5">
+			<div class="col-sm-8 my-5 pl-5 hero-text">
+				<span style="font-size: 40px;">Hi! I am Radhika,</span>
 				<h1 class="hero-h1">
 					I'm <span class="auto-type"></span>
 				</h1>
+				<p class="hero-subtext">
+						I blend creative problem-solving with user-centred design to craft intuitive digital experiences.
+				</p>
+				<a href="mailto: radhikajoglekar1231@gmail.com" class="btn btn-primary btn-arrow button">
+					Contact Me
+				</a>
 			</div>
-			<div class="col-sm-4">
-				<img src="images/Profile.png" class="img-fluid hero-image" alt="Responsive image">
+			<div class="col-sm-4 text-left">
+				<img src="images/profile_2.png" class="w-75 img-fluid hero-image" alt="Responsive image">
 			</div>
 		  </div>
+	  </div>
+	  <div class="container my-3">
+		<div class="row">
+			<div class="col-12">
+				<h2 class="text-center" style="font-weight: bold;">
+					Portfolio
+				</h2>
+			</div>
+		</div>
 	  </div>
 	  <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 	  <script>
 		var typed = new Typed(".auto-type", {
 			strings : ["an Interaction Designer.","a UX Researcher.", "a UI Developer.", "an Artist.", "a Cooking Enthusiast."],
-			typeSpeed: 150,
-			backSpeed: 150,
+			typeSpeed: 40,
+			backSpeed: 40,
 			looped: true,
 		})
 	  </script>
@@ -102,8 +118,8 @@
 		<a class="social-button instagram mx-2" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
 	  </div>
 	  <!-- Copyright -->
-	  <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-			© 2024 Radhika Shashikant Joglekar<br>
+	  <div class="text-center text-white p-3">
+			© 2024 Radhika Joglekar<br>
 			All Rights Reserved. | Designed & Developed by Radhika Joglekar | Powered by Creativity & Passion
 	  </div>
 	  <!-- Copyright -->
