--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				<p class="hero-subtext">
 						I blend creative problem-solving with user-centred design to craft intuitive digital experiences.
 				</p>
-				<a href="mailto: radhikajoglekar1231@gmail.com" class="btn btn-primary btn-arrow button">
+				<a href="mailto:radhikajoglekar1231@gmail.com" class="btn btn-primary btn-arrow button">
 					Contact Me
 				</a>
 			</div>
@@ -89,12 +89,24 @@
 	  <div class="container my-3">
 		<div class="row">
 			<div class="col-12">
-				<h2 class="text-center" style="font-weight: bold;">
+				<h1 class="text-center" style="font-weight: bold;">
 					Portfolio
-				</h2>
+				</h1>
 			</div>
 		</div>
 	  </div>
+	  <!-- <div class="container my-3">
+		<div class="row">
+			<div class="col-6">
+				<h1 class="text-center" style="font-weight: bold;">
+					SenseHarmony
+				</h1>
+			</div>
+			<div class="col-6">
+
+			</div>
+		</div>
+	  </div> -->
 	  <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 	  <script>
 		var typed = new Typed(".auto-type", {
@@ -114,8 +126,9 @@
 
 	<footer class="text-center text-lg-start">
 	  <div class="container d-flex justify-content-center pt-5 rounded-social-buttons">
-		<a class="social-button linkedin mx-2" href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
-		<a class="social-button instagram mx-2" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+		<a class="social-button linkedin mx-2" href="https://www.linkedin.com/in/radhika-joglekar/" target="_blank"><i class="fab fa-linkedin"></i></a>
+		<a class="social-button instagram mx-2" href="https://www.instagram.com/joglekar_radhika/" target="_blank"><i class="fab fa-instagram"></i></a>
+		<a class="social-button instagram mx-2" href="https://www.behance.net/radhikajoglekar88" target="_blank"><i class="fab fa-behance"></i></a>
 	  </div>
 	  <!-- Copyright -->
 	  <div class="text-center text-white p-3">
