--- a/index.html
+++ b/index.html
@@ -95,22 +95,25 @@
 			</div>
 		</div>
 	  </div>
-	  <!-- <div class="container my-3">
-		<div class="row">
-			<div class="col-6">
-				<h1 class="text-center" style="font-weight: bold;">
+	  <div class="container my-3" style="background-color: #DA6B4C;">
+		<div class="row ">
+			<div class="col-6 px-5 py-5">
+				<h2 class="text-left pt-5" style="font-weight: bold; color: #fdfffc;">
 					SenseHarmony
-				</h1>
+				</h2>
+				<p style="font-weight: 350; color: #343a40; font-size: 21px; font-style: italic; color: #fdfffc;">
+					SenseHarmony is a mobile application designed to monitor and help regulate sensory perception in adults through personalised sensory diets. The project focuses on addressing the gap in research surrounding sensory regulation in the general adult population.
+				</p>
 			</div>
-			<div class="col-6">
-
+			<div class="col-6 px-0">
+				<img src="images/Frame 9.png" class="w-100 img-fluid" alt="Responsive image">
 			</div>
 		</div>
-	  </div> -->
+	  </div>
 	  <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 	  <script>
 		var typed = new Typed(".auto-type", {
-			strings : ["an Interaction Designer.","a UX Researcher.", "a UI Developer.", "an Artist.", "a Cooking Enthusiast."],
+			strings : ["an Interaction Designer.","a UX Researcher.", "a UI Developer.", "an Artist.", "a Cooking Enthusiast.", "an Interaction Designer."],
 			typeSpeed: 40,
 			backSpeed: 40,
 			looped: true,
