--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 
-    <title>Radhika Joglekar</title>
+    <title>Radhika Joglekar - UX Designer</title>
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<a class="navbar-brand ml-3" href="#">Logo</a>
@@ -95,18 +95,87 @@
 			</div>
 		</div>
 	  </div>
-	  <div class="container my-3" style="background-color: #DA6B4C;">
-		<div class="row ">
-			<div class="col-6 px-5 py-5">
+	  <div class="container my-5  portfolio-1">
+		<div class="row">
+			<div class="col-sm-6 px-5 py-5">
 				<h2 class="text-left pt-5" style="font-weight: bold; color: #fdfffc;">
 					SenseHarmony
+				</h2>
+				<p style="font-weight: 350; font-size: 21px; font-style: italic; color: #fdfffc;">
+					SenseHarmony is a mobile application designed to monitor and help regulate sensory perception in adults through personalised sensory diets. The project focuses on addressing the gap in research surrounding sensory regulation in the general adult population.
+				</p>
+				<span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span> <span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: Mobile</span>
+				<div>
+					<a href="#" class="my-3 py-2 btn btn-primary button-portfolio">
+					View Project
+				</a>
+				</div>
+			</div>
+			<div class="col-sm-6 px-1 py-1">
+				<img src="images/Frame 9.png" class="w-100 img-fluid" alt="Responsive image">
+			</div>
+		</div>
+	  </div>
+	  <div class="container my-5 portfolio-1" style="background-color: #29489b;">
+		<div class="row">
+			<div class="col-sm-6 px-5 py-5">
+				<h2 class="text-left pt-5" style="font-weight: bold; color: #fdfffc;">
+					FitShare
+				</h2>
+				<p style="font-weight: 350; font-size: 21px; font-style: italic; color: #fdfffc;">
+					For adults who want to promote household wellbeing, FitShare is an interactive fitness hub that offers visualisation of household members' health metrics and recommends personalised activities.
+				</p>
+				<span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span> <span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: Monitor</span>
+				<div>
+					<a href="#" class=" my-3 py-2 btn btn-primary button-portfolio">
+					View Project
+				</a>
+				</div>
+			</div>
+			<div class="col-sm-6 px-1 py-1">
+				<img src="images/Mac Studio.png" class="w-100 img-fluid" alt="Responsive image">
+			</div>
+		</div>
+	  </div>
+	  <div class="container my-5 portfolio-1" style="background-color:#ffba08;">
+		<div class="row">
+			<div class="col-sm-6 px-5 py-5">
+				<h2 class="text-left pt-5" style="font-weight: bold; color: black;">
+					RelicRhymes
+				</h2>
+				<p style="font-weight: 350; font-size: 21px; font-style: italic; color: black;">
+					RelicRhymes is a collaborative system designed for the University of Nottingham’s Archaeology Museum. It invites the visitors to collectively craft Haikus which are inspired by the artefacts displayed in the museum.
+				</p>
+				<span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span> <span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: Mobile</span>
+				<div>
+					<a href="#" class="my-3 py-2 btn btn-primary button-portfolio">
+					View Project
+				</a>
+				</div>
+			</div>
+			<div class="col-sm-6 px-3 py-3">
+				<img src="images/Official-Color.png" class="w-100 img-fluid" alt="Responsive image">
+			</div>
+		</div>
+	  </div>
+	  <div class="container my-5 portfolio-1" style="background-color: #59341d;">
+		<div class="row">
+			<div class="col-sm-6 px-5 py-5">
+				<h2 class="text-left pt-5" style="font-weight: bold; color: #fdfffc;">
+					Piano Stairs
 				</h2>
 				<p style="font-weight: 350; color: #343a40; font-size: 21px; font-style: italic; color: #fdfffc;">
 					SenseHarmony is a mobile application designed to monitor and help regulate sensory perception in adults through personalised sensory diets. The project focuses on addressing the gap in research surrounding sensory regulation in the general adult population.
 				</p>
+				<span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span> <span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: Mobile</span>
+				<div>
+					<a href="#" class="my-3 py-2 btn btn-primary button-portfolio">
+					View Project
+				</a>
+				</div>
 			</div>
-			<div class="col-6 px-0">
-				<img src="images/Frame 9.png" class="w-100 img-fluid" alt="Responsive image">
+			<div class="col-sm-6 px-1 py-1">
+				<img src="images/Rectangle 5894.png" class="img-fluid w-100 h-100" alt="Responsive image">
 			</div>
 		</div>
 	  </div>
