Added senseharmony.html  page
Designed senseharmony project page.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			</div>
 		  </div>
 	  </div>
-	  <section>
+	  <section class="mx-4">
 	  <div class="container my-3">
 		<div class="row">
 			<div class="col-12">
@@ -104,9 +104,10 @@
 				<p style="font-weight: 350; font-size: 21px; font-style: italic; color: #fdfffc;">
 					SenseHarmony is a mobile application designed to monitor and help regulate sensory perception in adults through personalised sensory diets. The project focuses on addressing the gap in research surrounding sensory regulation in the general adult population.
 				</p>
-				<span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span> <span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: Mobile</span>
+				<!-- <span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span>  -->
+				<span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: Mobile</span>
 				<div>
-					<a href="#" class="my-3 py-2 btn btn-primary button-portfolio">
+					<a href="senseharmony.html" class="my-3 py-2 btn btn-primary button-portfolio">
 					View Project
 				</a>
 				</div>
@@ -125,7 +126,8 @@
 				<p style="font-weight: 350; font-size: 21px; font-style: italic; color: #fdfffc;">
 					For adults who want to promote household wellbeing, FitShare is an interactive fitness hub that offers visualisation of household members' health metrics and recommends personalised activities.
 				</p>
-				<span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span> <span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: Monitor</span>
+				<!-- <span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span>  -->
+				<span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: Monitor</span>
 				<div>
 					<a href="#" class=" my-3 py-2 btn btn-primary button-portfolio">
 					View Project
@@ -146,7 +148,8 @@
 				<p style="font-weight: 350; font-size: 21px; font-style: italic; color: black;">
 					RelicRhymes is a collaborative system designed for the University of Nottingham’s Archaeology Museum. It invites the visitors to collectively craft Haikus which are inspired by the artefacts displayed in the museum.
 				</p>
-				<span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span> <span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: Mobile</span>
+				<!-- <span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span>  -->
+				<span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: Mobile</span>
 				<div>
 					<a href="#" class="my-3 py-2 btn btn-primary button-portfolio">
 					View Project
@@ -167,7 +170,8 @@
 				<p style="font-weight: 350; color: #343a40; font-size: 21px; font-style: italic; color: #fdfffc;">
 					SenseHarmony is a mobile application designed to monitor and help regulate sensory perception in adults through personalised sensory diets. The project focuses on addressing the gap in research surrounding sensory regulation in the general adult population.
 				</p>
-				<span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span> <span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: Mobile</span>
+				<!-- <span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span>  -->
+				<span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: Mobile</span>
 				<div>
 					<a href="#" class="my-3 py-2 btn btn-primary button-portfolio">
 					View Project
@@ -183,13 +187,12 @@
 	  <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 	  <script>
 		var typed = new Typed(".auto-type", {
-			strings : ["an Interaction Designer.","a UX Researcher.", "a UI Developer.", "an Artist.", "a Cooking Enthusiast.", "an Interaction Designer."],
-			typeSpeed: 40,
-			backSpeed: 40,
-			looped: true,
+			strings : ["an Interaction Designer.","a UX Researcher.", "a UI Developer.", "an Artist.", "a Cooking Enthusiast."],
+			typeSpeed: 60,
+			backSpeed: 60,
+			loop: true,
 		})
 	  </script>
-
 	  <script>
 		window.addEventListener('scroll', reveal);
 
