--- a/senseharmony.html
+++ b/senseharmony.html
@@ -16,7 +16,7 @@
 			rel="stylesheet">
 		<title>Radhika Joglekar - UX Designer</title>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand ml-3" href="#">Logo</a>
+			<a class="navbar-brand ml-3" href="index.html">Logo</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
 				aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
