--- a/senseharmony.html
+++ b/senseharmony.html
@@ -486,7 +486,7 @@
 							<hr class="mt-2 text-center" style="width: 9%; border-top: 4px solid #DA6B4C; border-radius: 20px;">
 						</span>
 
-						<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="500" src="https://embed.figma.com/proto/PjPeA9Nj316ihdkwJiuyG8/SenseHarmony?page-id=&node-id=579-160&node-type=frame&viewport=-490%2C-1465%2C0.21&scaling=scale-down&content-scaling=fixed&starting-point-node-id=579%3A160&embed-host=share" allowfullscreen></iframe>
+						<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/proto/PjPeA9Nj316ihdkwJiuyG8/SenseHarmony?page-id=&node-id=572-1240&node-type=frame&viewport=-490%2C-1465%2C0.21&scaling=scale-down&content-scaling=fixed&starting-point-node-id=579%3A160&embed-host=share" allowfullscreen></iframe>
 					</div>
 				</div>
 			</div>
