--- a/senseharmony.html
+++ b/senseharmony.html
@@ -485,9 +485,11 @@
 						<span style="font-size: 35px; font-weight: 800; color: #334436;">Prototype
 							<hr class="mt-2 text-center" style="width: 9%; border-top: 4px solid #DA6B4C; border-radius: 20px;">
 						</span>
+						<h5 class="mb-3">
+							If you can't access the prototype from here, click <a href="https://www.figma.com/proto/PjPeA9Nj316ihdkwJiuyG8/SenseHarmony?page-id=&node-id=579-160&node-type=frame&viewport=-490%2C-1465%2C0.21&t=WTBiWl39pKrWjep8-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=579%3A160" target="_blank" style="text-decoration-line: none; color: #DA6B4C; font-weight: 700;">here.</a>
+						</h5>
 
 						<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="600" src="https://embed.figma.com/proto/PjPeA9Nj316ihdkwJiuyG8/SenseHarmony?page-id=0%3A1&node-id=579-160&node-type=frame&viewport=98%2C-800%2C0.1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=579%3A160&embed-host=share" allowfullscreen></iframe>
-
 					</div>
 				</div>
 			</div>
