--- a/senseharmony.html
+++ b/senseharmony.html
@@ -70,7 +70,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container-fluid underline" style="font-weight: bold;">
+			<div class="container-fluid underline reveal" style="font-weight: bold;">
 				<div class="row">
 					<div class="col-sm-12 my-5 hero-text text-center">
 						<span style="font-size: 35px; font-weight: 800; color: #334436;">Project Overview
@@ -90,7 +90,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container-fluid" style="font-weight: bold;">
+			<div class="container-fluid reveal" style="font-weight: bold;">
 				<div class="row px-4 mx-4 project-1-para">
 					<div class="col-sm-6 my-5 text-left">
 						<span style="font-size: 35px; font-weight: 800; color: #334436;">Problem Statement
@@ -109,7 +109,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container-fluid pt-4" style="font-weight: bold; background-color: #e3dac5;">
+			<div class="container-fluid reveal pt-4" style="font-weight: bold; background-color: #e3dac5;">
 				<div class="row">
 					<div class="underline col-sm-12 mt-2 hero-text text-center">
 						<span style="font-size: 35px; font-weight: 800; color: #334436;">Research
@@ -149,7 +149,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container-fluid" style="font-weight: bold;">
+			<div class="container-fluid reveal" style="font-weight: bold;">
 				<div class="row">
 					<div class="col-sm-12 mt-5 text-center">
 						<span style="font-size: 35px; font-weight: 800; color: #334436;">Research Methodology
@@ -165,13 +165,13 @@
 							Sensory diets are structured sets of activities tailored to an individual's sensory profile,
 							originally used for children but now explored for adult applications in this study. </p>
 					</div>
-					<div class="col-sm-12 my-5 pl-5 hero-text text-center">
+					<div class="col-sm-12 reveal my-5 pl-5 hero-text text-center">
 						<img src="images/convergent-design.png" class="project-image w-75 img-fluid" alt="Responsive image">
 						<figcaption class="pt-5">Convergence Model (Creswell & Plano Clark, 2011)</figcaption>
 					</div>
 				</div>
 			</div>
-			<div class="container-fluid" style="font-weight: bold;">
+			<div class="container-fluid reveal" style="font-weight: bold;">
 				<div class="row">
 					<div class="underline col-sm-12 mt-2 text-center">
 						<span style="font-size: 35px; font-weight: 800; color: #334436;">Project Timeline
@@ -184,7 +184,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="underline container-fluid" style="font-weight: bold;">
+			<div class="reveal underline container-fluid" style="font-weight: bold;">
 				<div class="row">
 					<div class="col-sm-12 my-5 hero-text text-center">
 						<span style="font-size: 35px; font-weight: 800; color: #334436;">Questionnaire
@@ -253,7 +253,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="underline container-fluid" style="font-weight: bold;">
+			<div class="reveal underline container-fluid" style="font-weight: bold;">
 				<div class="row">
 					<div class="col-sm-12 my-5  pl-5 hero-text text-center">
 						<span style="font-size: 35px; font-weight: 800; color: #334436;">Semi-structured Interview
@@ -310,7 +310,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container-fluid" style="background-color: #e3dac5; font-weight: bold;">
+			<div class="reveal container-fluid" style="background-color: #e3dac5; font-weight: bold;">
 				<div class="row">
 					<div class="underline col-sm-12 my-5 text-center">
 						<span style="font-size: 35px; font-weight: 800; color: #334436;">Design and Testing
@@ -372,7 +372,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container-fluid">
+			<div class="reveal container-fluid">
 				<div class="row">
 					<div class="underline col-sm-6 my-5 text-center">
 						<span style="font-size: 35px; font-weight: 800; color: #334436;">Affinity Mapping
@@ -438,7 +438,7 @@
 				</div>
 			</div>
 			</div>
-			<div class="container-fluid">
+			<div class="reveal container-fluid">
 				<div class="row">
 					<div class="underline col-sm-12 my-5 hero-text text-center">
 						<span style="font-size: 35px; font-weight: 800; color: #334436;">Final Results
@@ -479,7 +479,7 @@
 				</div>
 			</div>
 			</div>
-			<div class="container-fluid">
+			<div class="reveal container-fluid">
 				<div class="row">
 					<div class="underline col-sm-12 my-5 text-center">
 						<span style="font-size: 35px; font-weight: 800; color: #334436;">Prototype
