Updated index.html and fitshare.html
Added link to fitshare on homepage and on-scroll animations on fitshare page.

--- a/fitshare.html
+++ b/fitshare.html
@@ -67,7 +67,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container-fluid underline" style="font-weight: bold;">
+			<div class="container-fluid underline reveal" style="font-weight: bold;">
 				<div class="row">
 					<div class="col-sm-12 my-5 hero-text text-center">
 						<span style="font-size: 35px; font-weight: 800; color: #403d39;">Project Overview
@@ -82,7 +82,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container-fluid" style="font-weight: bold;">
+			<div class="container-fluid reveal" style="font-weight: bold;">
 				<div class="row px-4 mx-4 project-1-para">
 					<div class="col-sm-12 my-3 px-0 text-center">
 						<span style="font-size: 35px; font-weight: 800; color: #403d39;">Problem Statement
@@ -96,7 +96,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container-fluid pt-4" style="font-weight: bold; background-color: whitesmoke;">
+			<div class="container-fluid pt-4 reveal" style="font-weight: bold; background-color: whitesmoke;">
 				<div class="row">
 					<div class="underline col-sm-12 mt-2 hero-text text-center">
 						<span style="font-size: 35px; font-weight: 800; color: #403d39;">Objectives
@@ -130,7 +130,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container-fluid" style="font-weight: bold;">
+			<div class="container-fluid reveal" style="font-weight: bold;">
 				<div class="row">
 					<div class="col-sm-12 mt-5 text-center">
 						<span style="font-size: 35px; font-weight: 800; color: #403d39;">Target Audience
@@ -168,7 +168,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container-fluid" style="font-weight: bold;">
+			<div class="container-fluid reveal" style="font-weight: bold;">
 				<div class="my-5 row">
 					<div class="underline col-sm-12 mt-2 text-center">
 						<span style="font-size: 35px; font-weight: 800; color: #334436;">Design Process
@@ -180,7 +180,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="underline container-fluid" style="font-weight: bold; background-color: whitesmoke;">
+			<div class="underline container-fluid reveal" style="font-weight: bold; background-color: whitesmoke;">
 				<div class="row">
 					<div class="col-sm-12 my-5 hero-text text-center">
 						<span style="font-size: 35px; font-weight: 800; color: #212529;">Phase I: Empathise
@@ -240,7 +240,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="underline container-fluid" style="font-weight: bold;">
+			<div class="underline container-fluid reveal" style="font-weight: bold;">
 				<div class="row px-4 mx-4 project-1-para">
 					<div class="col-sm-12 my-5 hero-text text-center">
 						<span style="font-size: 35px; font-weight: 800; color: #212529;">Phase II: Define
@@ -278,7 +278,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="underline container-fluid py-4" style="font-weight: bold; background-color: whitesmoke;">
+			<div class="underline container-fluid py-4 reveal" style="font-weight: bold; background-color: whitesmoke;">
 				<div class="row px-4 mx-4 project-1-para">
 					<div class="col-sm-12 my-1 hero-text text-center">
 						<span style="font-size: 35px; font-weight: 800; color: #212529;">Phase III: Ideate
@@ -317,7 +317,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="underline container-fluid" style="font-weight: bold;">
+			<div class="underline container-fluid reveal" style="font-weight: bold;">
 				<div class="row px-4 mx-4 project-1-para">
 					<div class="col-sm-12 my-5 hero-text text-center">
 						<span style="font-size: 35px; font-weight: 800; color: #212529;">Phase VI: Design and Prototype
@@ -354,7 +354,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="underline container-fluid py-4" style="font-weight: bold; background-color: whitesmoke;">
+			<div class="underline container-fluid py-4 reveal" style="font-weight: bold; background-color: whitesmoke;">
 				<div class="row px-4 mx-4 project-1-para">
 					<div class="col-sm-12 my-1 hero-text text-center">
 						<span style="font-size: 30px; font-weight: 800; color: #212529;">Low-fidelity Wireframes
@@ -388,7 +388,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="underline container-fluid" style="font-weight: bold;">
+			<div class="underline container-fluid reveal" style="font-weight: bold;">
 				<div class="row px-4 mx-4 project-1-para">
 					<div class="col-sm-12 my-5 hero-text text-center">
 						<span style="font-size: 35px; font-weight: 800; color: #212529;">Phase V: Testing
@@ -413,7 +413,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="underline container-fluid" style="font-weight: bold;">
+			<div class="underline container-fluid reveal" style="font-weight: bold;">
 				<div class="row px-4 mx-4 project-1-para">
 					<div class="col-sm-12 my-5 hero-text text-center">
 						<span style="font-size: 35px; font-weight: 800; color: #212529;">Non-User Testing
@@ -457,7 +457,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="underline container-fluid" style="font-weight: bold; background-color: whitesmoke;">
+			<div class="underline container-fluid reveal" style="font-weight: bold; background-color: whitesmoke;">
 				<div class="row px-4 mx-4 project-1-para">
 					<div class="col-sm-7 my-5 hero-text text-left">
 						<span style="font-size: 35px; font-weight: 800; color: #212529;">Conclusion
