Added relicrehymes.html page
Designed the relicrhymes case study.

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 					RelicRhymes is a collaborative system designed for the University of Nottingham’s Archaeology Museum. It invites the visitors to collectively craft Haikus which are inspired by the artefacts displayed in the museum.
 				</p>
 				<!-- <span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span>  -->
-				<span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: Mobile</span>
+				<span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: Monitor</span>
 				<div>
 					<a href="#" class="my-3 py-2 btn btn-primary button-portfolio">
 					View Project
