--- a/relicrhymes.html
+++ b/relicrhymes.html
@@ -370,21 +370,25 @@
 						<div class="col-sm-12 my-2 hero-text text-center">
 							<h5 style="font-size: 24px; font-weight: 800; color: #212529;"> Prototype for Screen 1:
 								(Visitor Interaction) </h5>
-							<iframe class="project-image" style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
+							<div>
+								<iframe class="project-image" style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
 								src="https://embed.figma.com/proto/8s7LCxJQ6gV5TvqEJ1QC4k/Collaboration-and-communication-systems?page-id=0%3A1&node-id=12-2&starting-point-node-id=12%3A2&embed-host=share"
 								allowfullscreen></iframe>
+							</div>
 						</div>
 						<div class="col-sm-12 my-5 hero-text text-center">
 							<h5 style="font-size: 24px; font-weight: 800; color: #212529;"> Prototype for Screen 2 :
 								(Public Display) </h5>
-							<iframe class="project-image" style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
+							<div>
+								<iframe class="project-image" style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
 								src="https://embed.figma.com/proto/8s7LCxJQ6gV5TvqEJ1QC4k/Collaboration-and-communication-systems?page-id=0%3A1&node-id=63-498&starting-point-node-id=63%3A498&embed-host=share"
 								allowfullscreen></iframe>
+							</div>
 						</div>
 					</div>
 				</div>
-				<!-- <div class="underline container-fluid reveal" style="font-weight: bold; background-color: whitesmoke;">
-					<div class="row px-4 mx-4 project-1-para">
+				<div class="underline my-5 container-fluid reveal" style="font-weight: bold; background-color: whitesmoke;">
+					<div class="row px-4 mx-4 py-4 project-1-para">
 						<div class="underline col-sm-7 my-3 py-5 text-left">
 							<span class="text-left"
 								style="font-size: 30px; font-weight: 800; color: #403d39;">Conclusion
@@ -398,11 +402,11 @@
 								individual engagement but also cultivates a sense of community among visitors.</p>
 						</div>
 						<div class="underline col-sm-5 d-flex align-items-center my-3 text-center">
-							<img src="images/relicrhymeswireframe1.jpeg" class="project-image w-75 img-fluid"
+							<img src="images/relicrhymesconclusion.svg" class="project-image w-75 img-fluid"
 								alt="Responsive image">
 						</div>
 					</div>
-				</div> -->
+				</div>
 		</section>
 		<script>
 			window.addEventListener('scroll',reveal);
