--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 				<!-- <span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span>  -->
 				<span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: Monitor</span>
 				<div>
-					<a href="#" class="my-3 py-2 btn btn-primary button-portfolio">
+					<a href="relicrhymes.html" class="my-3 py-2 btn btn-primary button-portfolio">
 					View Project
 				</a>
 				</div>
