Updated all html files
Added mailto links to contact form and removed "about me" link from navbar.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Radhika Joglekar - UX Designer</title>
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand ml-3" href="index.html">Logo</a>
+		<a class="navbar-brand ml-3" href="/">Logo</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 		</button>
@@ -23,10 +23,7 @@
 		<div class="collapse navbar-collapse circle" id="navbarTogglerDemo02">
 		  <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
 			<li class="nav-item active px-2">
-			  <a class="nav-link" href="#">About<span class="sr-only"></span></a>
-			</li>
-			<li class="nav-item active px-2">
-				<a class="nav-link" href="#">Portfolio<span class="sr-only"></span></a>
+				<a class="nav-link" href="/#portfolio-section">Portfolio<span class="sr-only"></span></a>
 			  </li>
 			<li class="nav-item active px-2">
 				<a class="nav-link" href="#">Other Works <span class="sr-only"></span></a>
@@ -35,7 +32,7 @@
 				<a class="nav-link" href="assets/Radhika_Joglekar_UX_Design.pdf" download>Resume<span class="sr-only"></span></a>
 			  </li>
 			<li class="nav-item active px-2">
-			<a class="nav-link" href="#">Contact Me<span class="sr-only"></span></a>
+			<a class="nav-link" href="mailto:radhikajoglekar1231@gmail.com" target="_blank">Contact Me<span class="sr-only"></span></a>
 			</li>
 		  </ul>
 		</div>
@@ -45,29 +42,6 @@
 
 	<div class="container-fluid main-hero py-3">
 		<div class="row">
-			<!-- <div class="col-sm-8 my-5">
-				<span style="font-size: 40px;">Hi! I am Radhika,</span>
-				<div class="wrapper">
-					<div class="static-txt">I'm</div>
-					<ul class="pl-3 dynamic-txts">
-						<li>
-							<span>a Designer.</span>
-						</li>
-						<li>
-							<span>a UX Researcher.</span>
-						</li>
-						<li>
-							<span>a UI Developer.</span>
-						</li>
-						<li>
-							<span>an Artist.</span>
-						</li>
-						<li>
-							<span>a Cooking Enthusiast</span>
-						</li>
-					</ul>
-				</div>
-			</div> -->
 			<div class="col-sm-8 my-5 pl-5 hero-text">
 				<span style="font-size: 40px;">Hi! I am Radhika,</span>
 				<h1 class="hero-h1">
@@ -85,8 +59,8 @@
 			</div>
 		  </div>
 	  </div>
-	  <section class="mx-4">
-	  <div class="container my-3">
+	  <section class="mx-4" id="portfolio-section">
+	  <div class="container my-5">
 		<div class="row">
 			<div class="col-12">
 				<h1 class="text-center" style="font-weight: bold;">
