--- a/senseharmony.html
+++ b/senseharmony.html
@@ -16,7 +16,7 @@
 			rel="stylesheet">
 		<title>Radhika Joglekar - UX Designer</title>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand ml-3" href="index.html">Logo</a>
+			<a class="navbar-brand ml-3" href="/">Logo</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
 				aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -24,10 +24,7 @@
 			<div class="collapse navbar-collapse circle" id="navbarTogglerDemo02">
 				<ul class="navbar-nav ml-auto mt-2 mt-lg-0">
 					<li class="nav-item active px-2">
-						<a class="nav-link" href="#">About<span class="sr-only"></span></a>
-					</li>
-					<li class="nav-item active px-2">
-						<a class="nav-link" href="#">Portfolio<span class="sr-only"></span></a>
+						<a class="nav-link" href="/#portfolio-section"">Portfolio<span class="sr-only"></span></a>
 					</li>
 					<li class="nav-item active px-2">
 						<a class="nav-link" href="#">Other Works <span class="sr-only"></span></a>
@@ -37,7 +34,7 @@
 								class="sr-only"></span></a>
 					</li>
 					<li class="nav-item active px-2">
-						<a class="nav-link" href="#">Contact Me<span class="sr-only"></span></a>
+						<a class="nav-link" href="mailto:radhikajoglekar1231@gmail.com" target="_blank">Contact Me<span class="sr-only"></span></a>
 					</li>
 				</ul>
 			</div>
